tests/algorithms/x/PHP/maths/chudnovsky_algorithm.bench
Fatal error: Cannot redeclare function pi() in /workspace/mochi/tests/algorithms/x/PHP/maths/chudnovsky_algorithm.php on line 66